# graphmem

./: .env.example  .gitignore  README.md  pyproject.toml
claude-commands/: longmemory.md
claude-integration/: CLAUDE.md.example
src/graphmem/: __init__.py  cli.py  config.py  core.py  formatters.py  utils.py
src/graphmem/providers/: __init__.py  embeddings.py  llm.py
src/graphmem/viz/: graph-live.html  graph.html  server.py
tests/: test_cli.py  test_core.py  test_providers.py
