[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphmem"
version = "0.1.0"
description = "CLI graph-based long-term memory for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core[kuzu]>=0.28.0",
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
local = ["sentence-transformers>=3.0.0"]
all = ["boto3>=1.34.0", "openai>=1.0.0", "anthropic>=0.40.0", "sentence-transformers>=3.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
graphmem = "graphmem.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/graphmem"]
